--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,10 @@
   "main": "polymer-card-contact.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "paper-card": "PolymerElements/paper-card#^1.1.6"
+    "paper-card": "PolymerElements/paper-card#^1.1.6",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.13",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
