--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.13",
     "iron-elements": "PolymerElements/iron-elements#^1.0.10",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.5"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.5",
+    "paper-styles": "PolymerElements/paper-styles#^1.2.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
